{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 28,
  "lineage": "b0ac28bc-8cfa-80a3-88cf-1f6cf9941caf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sweethome-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459343727810:internet-gateway/igw-07a65ab294b29ef9b",
            "id": "igw-07a65ab294b29ef9b",
            "owner_id": "459343727810",
            "tags": {
              "Name": "sweethome-IGW"
            },
            "tags_all": {
              "Name": "sweethome-IGW"
            },
            "vpc_id": "vpc-09bc07db7dc2afcaa"
          },
          "dependencies": [
            "aws_vpc.sweet-home-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "sw-public-internet-igw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07a65ab294b29ef9b",
            "id": "r-rtb-093aefdcc03e282481080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-093aefdcc03e28248",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sweethome-igw",
            "aws_route_table.sw-public-route-table",
            "aws_vpc.sweet-home-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sw-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459343727810:route-table/rtb-0d0721849c9a7f6f1",
            "id": "rtb-0d0721849c9a7f6f1",
            "owner_id": "459343727810",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sw-private-route-table"
            },
            "tags_all": {
              "Name": "sw-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09bc07db7dc2afcaa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sweet-home-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sw-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459343727810:route-table/rtb-093aefdcc03e28248",
            "id": "rtb-093aefdcc03e28248",
            "owner_id": "459343727810",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07a65ab294b29ef9b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sw-public-route-table"
            },
            "tags_all": {
              "Name": "sw-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09bc07db7dc2afcaa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sweet-home-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sw-private-route-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c709fd286ad48c18",
            "route_table_id": "rtb-0d0721849c9a7f6f1",
            "subnet_id": "subnet-05d6a54d58409a377"
          },
          "dependencies": [
            "aws_route_table.sw-private-route-table",
            "aws_subnet.sw-priv-sub1-ecs-cidr",
            "aws_vpc.sweet-home-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sw-public-route-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054e8113db0f04f2b",
            "route_table_id": "rtb-093aefdcc03e28248",
            "subnet_id": "subnet-085f08f39c100f3cf"
          },
          "dependencies": [
            "aws_route_table.sw-public-route-table",
            "aws_subnet.sw-pub-sub1-ecs-cidr",
            "aws_vpc.sweet-home-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sw-priv-sub1-ecs-cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459343727810:subnet/subnet-05d6a54d58409a377",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d6a54d58409a377",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "459343727810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sw-Public-Subnet-1-ecs"
            },
            "tags_all": {
              "Name": "sw-Public-Subnet-1-ecs"
            },
            "vpc_id": "vpc-09bc07db7dc2afcaa"
          },
          "dependencies": [
            "aws_vpc.sweet-home-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sw-pub-sub1-ecs-cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459343727810:subnet/subnet-085f08f39c100f3cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085f08f39c100f3cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "459343727810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sw-Public-Subnet-1-ecs"
            },
            "tags_all": {
              "Name": "sw-Public-Subnet-1-ecs"
            },
            "vpc_id": "vpc-09bc07db7dc2afcaa"
          },
          "dependencies": [
            "aws_vpc.sweet-home-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sweet-home-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459343727810:vpc/vpc-09bc07db7dc2afcaa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-058402c0b762a4ea5",
            "default_route_table_id": "rtb-01fde9366dc9d871f",
            "default_security_group_id": "sg-009cf63c35c06e0e1",
            "dhcp_options_id": "dopt-bb7280c1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09bc07db7dc2afcaa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01fde9366dc9d871f",
            "owner_id": "459343727810",
            "tags": {
              "Name": "sweethome-VPC"
            },
            "tags_all": {
              "Name": "sweethome-VPC"
            }
          }
        }
      ]
    }
  ]
}